fixes post scroll on mobile (menu doesnt display incorrectly anymore)
2

--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -1726,7 +1726,9 @@ margin: auto;
     overflow: hidden;
 
 }
-
+.post-sidebar-title > span{
+font-size: 2.2em;
+}
 .post-sidebar ol {
   margin: 5px;
 }
